--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ h1.navbar-brand {
 h1.navbar-brand1 {
   /*   font-size: 3em; */
 /*     font-family: 'Marvel-Regular'; */
-	padding: 0.25em 1em 0 0; 
+	padding: 0.5px 1em 0 0; 
 /*     position: absolute;
   	left: 0px;
   	top: 0px; */
