--- a/css/style.css
+++ b/css/style.css
@@ -1524,7 +1524,7 @@ p span.overline{
 .register-but{
 	margin-top:1em;
 }
-.register-but form input[type="submit"] {
+.register-but form a[type="submit"] {
     border: 2px solid #F07818;
     color: #FFF;
     font-size: 1.1em;
@@ -1537,7 +1537,7 @@ p span.overline{
     outline: none;
     background-color: #F07818;
 }
-.register-but input[type="submit"]:hover {
+.register-but a[type="submit"]:hover {
     background: #FFF;
     color: #F07818;
 }
@@ -2777,7 +2777,7 @@ ul.size li a {
 .register-bottom-grid {
     margin-top: 2em;
 }
-.register-but form input[type="submit"] {
+.register-but form a[type="submit"] {
     font-size: 1em;
     padding: 0.4em 2em;
     width: 25%;
@@ -3034,7 +3034,7 @@ ul.qty li p {
     font-size: 0.9em;
     padding: 0.3em;
 }
-.register-but form input[type="submit"] {
+.register-but form a[type="submit"] {
     font-size: 0.9em;
     width: 22%;
 }
@@ -3307,7 +3307,7 @@ span.item_price {
 .register-top-grid input[type="text"], .register-bottom-grid input[type="password"] {
     width: 100%;
 }
-.register-but form input[type="submit"] {
+.register-but form a[type="submit"] {
     width: 100%;
 }
 .register-but {
