--- a/css/UserInfo.css
+++ b/css/UserInfo.css
@@ -5,3 +5,11 @@
 	background-color:#ec6300!important;
 	
 }
+.modal-content{
+	padding:0px 150px;
+}
+.modal-title{
+  margin-top: 30px;
+  border-bottom: 1px solid #e5e5e5;
+  margin-bottom: 20px;
+}
