--- a/css/UserInfo.css
+++ b/css/UserInfo.css
@@ -13,3 +13,32 @@
   border-bottom: 1px solid #e5e5e5;
   margin-bottom: 20px;
 }
+.pf-avatar-box {
+    display: inline-block;
+    position: relative;
+    border: 3px solid #e6e6e6;
+    width: 80px;
+    height: 80px;
+}
+.pf-avatar-box .pf-avatar {
+    display: table-cell;
+    width: 80px;
+    height: 80px;
+    vertical-align: middle;
+    text-align: center;
+}
+.pf-avatar-box .pf-edit-avatar {
+    background: #000;
+    background-position: 10px 6px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 21px;
+    line-height: 21px;
+    text-align: center;
+    color: #e1d7ca;
+    opacity: .7;
+    filter: alpha(opacity=70);
+    display: none;
+}
