--- a/css/UserInfo.css
+++ b/css/UserInfo.css
@@ -23,7 +23,7 @@
 .pf-avatar-box .pf-avatar {
     display: table-cell;
     width: 80px;
-    height: 80px;
+    height: 100%;
     vertical-align: middle;
     text-align: center;
 }
@@ -40,5 +40,69 @@
     color: #e1d7ca;
     opacity: .7;
     filter: alpha(opacity=70);
-    display: none;
+    
+}
+.login-field {
+	
+	border-radius: 6px;
+    border-color: #34495e;
+    font-size: 17px;
+    padding-bottom: 11px;
+    padding-top: 11px;
+    text-indent: 3px;
+    width: 299px;
+}
+.radio {
+    margin-bottom: 12px;
+    padding-left: 32px;
+    position: relative;
+    -webkit-transition: 0.25s;
+    -moz-transition: 0.25s;
+    -o-transition: 0.25s;
+    transition: 0.25s;
+    -webkit-backface-visibility: hidden;
+}
+.btn {
+    border: none;
+    background: #34495e;
+    color: white;
+    font-size: 16.5px;
+    text-decoration: none;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: 0.25s;
+    -moz-transition: 0.25s;
+    -o-transition: 0.25s;
+    transition: 0.25s;
+    -webkit-backface-visibility: hidden;
+}
+.btn-block {
+    display: block;
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+ .btn:hover, .btn:focus {
+    background-color: #4e6d8d;
+    color: white;
+    -webkit-transition: 0.25s;
+    -moz-transition: 0.25s;
+    -o-transition: 0.25s;
+    transition: 0.25s;
+    -webkit-backface-visibility: hidden; }
+.btn:active, .btn.active {
+	background-color: #2c3e50;
+	color: rgba(255, 255, 255, 0.75);
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
+
+.awarning {
+	color: #E74C3C;
 }
