--- a/css/UserInfo.css
+++ b/css/UserInfo.css
@@ -78,6 +78,39 @@
     transition: 0.25s;
     -webkit-backface-visibility: hidden;
 }
+.btnCheckout{
+	border: none;
+    background: #E67E22;
+    color: white;
+    font-size: 16.5px;
+    text-decoration: none;
+    text-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    -webkit-transition: 0.25s;
+    -moz-transition: 0.25s;
+    -o-transition: 0.25s;
+    transition: 0.25s;
+    -webkit-backface-visibility: hidden;
+	padding:6px 12px;
+	border-radius:4px;
+}
+.btnCheckout:hover, .btnCheckout:focus {
+    background-color: #D35400;
+    color: white;
+    -webkit-transition: 0.25s;
+    -moz-transition: 0.25s;
+    -o-transition: 0.25s;
+    transition: 0.25s;
+    -webkit-backface-visibility: hidden; }
+.btnCheckout:active, .btnCheckout.active {
+	background-color: #D35400;
+	color: rgba(255, 255, 255, 0.75);
+	-webkit-box-shadow: none;
+	-moz-box-shadow: none;
+	box-shadow: none;
+}
 .btn-block {
     display: block;
     width: 100%;
